--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+		<dependency>
+			<groupId>com.paypal.sdk</groupId>
+			<artifactId>checkout-sdk</artifactId>
+			<version>1.0.1</version>
+		</dependency>
     </dependencies>
 
 	<build>
